--- a/DriveToTravel/app/build.gradle
+++ b/DriveToTravel/app/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     compile files('libs/json-simple-1.1.1 (1).jar')
     compile 'com.android.support:appcompat-v7:23.2.0'
     compile 'com.android.support:design:23.2.0'
+    compile 'com.google.android.gms:play-services:9.0.1'
 }
