--- a/DriveToTravel/app/src/main/AndroidManifest.xml
+++ b/DriveToTravel/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        android:theme="@style/AppTheme">
         <activity android:name=".Activities.MainActivity" />
         <activity android:name=".Activities.Login">
             <intent-filter>
@@ -23,20 +23,20 @@
         <activity
             android:name=".Activities.DriverMain"
             android:label="@string/title_activity_driver_main"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+            android:theme="@style/AppTheme" />
         <activity
             android:name=".Activities.AddTourActivity"
             android:label="@string/title_activity_add_tour"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+            android:theme="@style/AppTheme" />
         <activity
             android:name=".Activities.ActivityDriverMain"
             android:label="@string/title_activity_activity_driver_main"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+            android:theme="@style/AppTheme" />
         <activity
             android:name=".Activities.ActivityShowTours"
             android:label="@string/title_activity_activity_show_tours"
             android:parentActivityName=".Activities.ActivityDriverMain"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+            android:theme="@style/AppTheme">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="rs.elfak.mosis.drivetotravel.drivetotravel1.Activities.ActivityDriverMain" />
@@ -44,7 +44,9 @@
         <activity
             android:name=".Activities.ActivityTourDetails"
             android:label="@string/title_activity_activity_tour_details"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
+            android:theme="@style/AppTheme" />
+        <activity android:name=".Activities.PassangerMainActivity" />
+        <activity android:name=".Activities.SearchRideActivity"></activity>
     </application>
 
 </manifest>
