--- a/DriveToTravel/app/src/main/AndroidManifest.xml
+++ b/DriveToTravel/app/src/main/AndroidManifest.xml
@@ -3,10 +3,19 @@
     package="rs.elfak.mosis.drivetotravel.drivetotravel1">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.CAMERAA" />
-    <uses-permission android:name="android.permission.BLUETOOTH"/>
-    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <!--
+         The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
+         Google Maps Android API v2, but you must specify either coarse or fine
+         location permissions for the 'MyLocation' functionality. 
+    -->
+
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -18,7 +27,6 @@
         <activity android:name=".Activities.Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -52,7 +60,22 @@
             android:name=".Services.LocationUpdateIntentService"
             android:exported="false" />
 
-        <activity android:name=".Activities.friendshipActivity"></activity>
+        <activity android:name=".Activities.friendshipActivity" />
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
+
+        <activity
+            android:name=".Activities.tourMap"
+            android:label="@string/title_activity_tour_map"
+            android:theme="@style/AppTheme"
+            />
+
+        <service
+            android:name=".Services.GPSTracker"
+            android:enabled="true"
+            android:exported="false"></service>
     </application>
 
 </manifest>
