--- a/DriveToTravel/app/src/main/AndroidManifest.xml
+++ b/DriveToTravel/app/src/main/AndroidManifest.xml
@@ -13,6 +13,8 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
+        android:name="android.support.multidex.MultiDexApplication"
+
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -76,10 +78,10 @@
             <!--android:enabled="true"-->
             <!--android:exported="false"></service>-->
 
-        <!--<activity-->
-            <!--android:name=".Activities.DriversMainActivity"-->
-            <!--android:label="@string/title_activity_drivers_main"-->
-            <!--android:theme="@style/AppTheme.NoActionBar"></activity>-->
+        <activity
+            android:name=".Activities.DriversMainActivity"
+            android:label="@string/title_activity_drivers_main"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
 
     </application>
 
